# skdr-eval

./: -files --others --exclude-standard  .bandit  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.bib  CITATION.cff  CLAIMS.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  RELEASE_NOTES_v0.11.0.md  RELEASE_NOTES_v0.12.0.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.7.0.md  RELEASE_NOTES_v0.8.0.md  RELEASE_NOTES_v0.9.0.md  bandit-report.json  codecov.yml  constraints-min.txt  coverage.json  ecurity scanning commands  mkdocs.yml  mypy.ini  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.devcontainer/: devcontainer.json
.github/: BRANCH_PROTECTION_SETUP.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: src.instructions.md
.github/workflows/: ci.yml  deps-nightly.yml  deps-weekly.yml  release.yml
changelog.d/: 178.added.md  178.changed.md  184.added.md  191.fixed.md  205.added.md  206.added.md  208.added.md  210.added.md  212.added.md  214.added.md  231.added.md  234.added.md  236.changed.md  237.added.md  238.added.md  242.added.md  248.added.md  249.added.md  251.added.md  253.added.md  254.changed.md  255.added.md  256.changed.md  257.changed.md  258.changed.md  README.md
docs/: DEVELOPMENT.md  LAUNCH_CHECKLIST.md  agent-routing.md  api-stability.md  api.md  api.rst  architecture.md  choosing-an-estimator.md  comparisons.md  conf.py  daily-driver.md  datasets.md  development.rst  examples.rst  index.md  index.rst  methods.md  metrics-glossary.md  python-api.md  report-interpretation.md  rollout-checklist.md  schemas.rst  slate-vs-pairwise-vs-standard.md  statistical-validation-matrix.md  weaver-stack.md  zenodo.md
docs/agent-context/: architecture.md  invariants.md  lessons-learned.md  review-checklist.md  workflows.md
docs/concepts/: estimands-and-assumptions.md
docs/extending/: add-an-estimator.md
docs/getting-started/: install.md  quickstart.md
docs/recipes/: good-vs-bad-support.md  llm-reranker-ope.md  llm-summary-prompt.md  logs-to-experiment-card.md  obp-interop.md
docs/schemas/: artifact.schema.json  card.schema.json
examples/: advanced_evaluation.ipynb  boosting_adapter.py  obp_interop.py  preflight.py  quickstart.py  quickstart_estimators.py  quickstart_mips.py  quickstart_pairwise.py  quickstart_slate.py  real_data_obd.py
examples/extending/: custom_estimator.py
examples/known_failures/: README.md  misspecified_q.py  non_stationary.py  poor_overlap.py
examples/notebooks/: 01_quickstart.ipynb  02_pairwise_quickstart.ipynb  03_ecommerce_ranking.ipynb  04_ad_targeting.ipynb  05_healthcare_cate.ipynb  06_good_vs_bad_support.ipynb  10_llm_reranker_ope.ipynb
examples/use_cases/: 01_ecommerce_ranking.py  02_ad_targeting.py  03_healthcare_cate.py  04_call_routing.py  05_logs_to_experiment_card.py  06_agent_routing_policy.py  07_simulator_and_scenarios.py  08_share_and_compare.py  08_share_results.py
scripts/: check_citation_consistency.py  generate_schemas.py  validate_contribution.py
src/skdr_eval/: __init__.py  _frames.py  _simulation.py  _version.py  capabilities.py  choice.py  cli.py  config.py  core.py  diagnostics.py  doctor.py  exceptions.py  models.py  pairwise.py  recommendation.py  reporting.py  scenarios.py  statistical.py  synth.py  types.py  validation.py  visualization.py
src/skdr_eval/adapters/: __init__.py  boosting.py  trace.py
src/skdr_eval/datasets/: __init__.py  _cache.py  obd.py
src/skdr_eval/estimators/: __init__.py  core.py  mips.py  outcome_losses.py  protocols.py  weight_transforms.py
src/skdr_eval/recipes/: __init__.py  llm_reranker.py
src/skdr_eval/slate/: __init__.py  estimators.py  evaluate.py  synth.py
src/skdr_eval/templates/: card.html  report.html
src/skdr_eval/trackers/: __init__.py  _stub.py  aim.py  mlflow.py  wandb.py
tests/: conftest.py  test_adapters_boosting.py  test_api.py  test_audit_followups.py  test_baseline_delta.py  test_bootstrap_ci.py  test_bootstrap_integration.py  test_capabilities.py  test_card_schema.py  test_citation_consistency.py  test_cli.py  test_cli_exit_codes.py  test_config.py  test_contributions.py  test_core_estimator_coverage.py  test_coverage_gaps.py  test_coverage_simulation.py  test_datasets.py  test_design_and_propensity.py  test_diagnostics_trust.py  test_doctor.py  test_dr_sndr_smoke.py  test_error_handling.py  test_estimator_recovery_simulation.py  test_estimators_coverage.py  test_estimators_extended.py  test_execution_mode.py  test_explain.py  test_extending_example.py  test_external_policies.py  test_frame_inputs.py  test_llm_reranker_recipe.py  test_mips_api.py  test_models.py  test_obp_interop_example.py  test_pairwise_api.py  test_parallel_and_chunked.py  test_per_action_diagnostics.py  test_propensity_choice.py  test_propensity_diagnostics.py  (+15 more)
tests/fixtures/artifact_samples/: v1_0_0_sample.json  v_current_sample.json
tests/sim_studies/: __init__.py  test_bootstrap_validity.py  test_dr_misspecification.py  test_elig_mask_recovery.py  test_external_policy_recovery.py  test_mips_marginal_recovery.py  test_overlap_failure.py  test_parallel_bootstrap_recovery.py  test_policy_value_recovery.py  test_propensity_calibration_recovery.py
