[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skdr-eval"
dynamic = ["version"]
description = "General-purpose offline policy evaluation for sklearn-compatible models with time-aware Doubly Robust (DR) and Stabilized DR (SNDR) estimators, calibrated propensities, and stakeholder evaluation cards"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Diogo Santos", email = "diogofcul@gmail.com"}
]
keywords = [
    "offline policy evaluation",
    "ope",
    "doubly robust",
    "stabilized doubly robust",
    "sndr",
    "counterfactual evaluation",
    "contextual bandits",
    "causal inference",
    "treatment effects",
    "ranking",
    "recommender systems",
    "ad targeting",
    "uplift modeling",
    "autoscaling",
    "service time",
    "time series",
    "scikit-learn",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "pyyaml>=5.1",
    "scikit-learn>=1.1",
    "scipy>=1.9",
    "jinja2>=3.1",
    "pydantic>=2.0",
]

[project.optional-dependencies]
speed = [
    "pyarrow>=14",
    "polars>=0.20",
]
viz = [
    "matplotlib>=3.5",
]
cli = [
    "typer>=0.12",
    "joblib>=1.3",
    "pyarrow>=14",
]
mlflow = [
    "mlflow>=2.10",
]
wandb = [
    "wandb>=0.17",
]
aim = [
    "aim>=3.20",
]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
    "mypy",
    "types-PyYAML",
    "ruff",
    "black",
    "build",
    "twine",
    "pre-commit",
    "matplotlib",
    "typer>=0.12",
    "joblib>=1.3",
    "pyarrow>=14",
    "nbmake>=1.5",
    "nbformat>=5.0",
]
examples = [
    "jupyter",
    "matplotlib",
]
notebooks = [
    "jupyter",
    "matplotlib>=3.5",
    "nbformat>=5.0",
    "nbclient>=0.10",
]

[project.scripts]
skdr-eval = "skdr_eval.cli:app"

[project.urls]
Homepage = "https://github.com/dgenio/skdr-eval"
Repository = "https://github.com/dgenio/skdr-eval"
Issues = "https://github.com/dgenio/skdr-eval/issues"
Changelog = "https://github.com/dgenio/skdr-eval/blob/main/CHANGELOG.md"
Documentation = "https://github.com/dgenio/skdr-eval#readme"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
skdr_eval = ["templates/*.html"]

[tool.setuptools_scm]
write_to = "src/skdr_eval/_version.py"
tag_regex = "^v(?P<version>[^\\+]+)(?:\\+.*)?$"
fallback_version = "0.0.0"
# Use "dirty-tag" to append '.dirty' to the version when the working directory has uncommitted changes,
# making it clear when a build is not from a clean state.
local_scheme = "dirty-tag"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=skdr_eval",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "pandas.*",
    "sklearn.*",
    "scipy.*",
    "matplotlib.*",
    "xgboost.*",
    "lightgbm.*",
    "seaborn.*",
    "jinja2.*",
    "pydantic.*",
    "yaml.*",
    "typer.*",
    "joblib.*",
    "mlflow.*",
    "wandb.*",
    "aim.*",
]
ignore_missing_imports = true

# The Typer CLI module uses ``@app.command(...)`` decorators that mypy
# (correctly) flags as untyped because Typer's command decorator is
# overloaded; suppress only that one error code so the rest of the strict
# config still applies.
# NOTE: These overrides mirror mypy.ini (which takes precedence at runtime).
[[tool.mypy.overrides]]
module = ["skdr_eval.cli"]
disable_error_code = ["untyped-decorator"]
