[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skdr-eval"
dynamic = ["version"]
description = "Offline policy evaluation (OPE) for scikit-learn policies — time-aware doubly-robust (DR/SNDR) estimates with honest trust diagnostics and a deploy / don't-deploy verdict"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Diogo Santos", email = "diogofcul@gmail.com"}
]
keywords = [
    "offline policy evaluation",
    "ope",
    "policy evaluation",
    "doubly robust",
    "stabilized doubly robust",
    "sndr",
    "counterfactual evaluation",
    "contextual bandits",
    "causal inference",
    "treatment effects",
    "ranking",
    "recommender systems",
    "ad targeting",
    "uplift modeling",
    "autoscaling",
    "service time",
    "time series",
    "scikit-learn",
    "python",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10,<3.15"
# Library-grade dependency constraints (#152): lower bounds only — no exact
# pins (``==``) and no speculative upper-bound caps. Floors are the lowest
# versions the test suite is known to pass on (proven by the ``floor-deps``
# CI job). The scheduled latest/pre-release CI job is the safety net that
# justifies leaving the upper end uncapped. See DEVELOPMENT.md.
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=5.1",
    "scikit-learn>=1.2",
    "scipy>=1.10",
    "jinja2>=3.1",
    "pydantic>=2.0",
]

[project.optional-dependencies]
speed = [
    "pyarrow>=14",
    "polars>=0.20",
]
viz = [
    "matplotlib>=3.5",
]
cli = [
    "typer>=0.12",
    "joblib>=1.3",
    "pyarrow>=14",
]
boosting = [
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
]
mlflow = [
    "mlflow>=2.10",
]
wandb = [
    "wandb>=0.17",
]
aim = [
    "aim>=3.20",
]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
    # ruff / mypy are EXACT-pinned (==) and kept in lockstep with the
    # .pre-commit-config.yaml revs (#254) so pre-commit, `pip install -e .[dev]`
    # and CI all run the identical binary — no more "green locally, red on CI"
    # lint/type drift. Bump both deliberately in one PR (here + pre-commit).
    "ruff==0.15.18",
    "mypy==2.1.0",
    "types-PyYAML",
    "tomli; python_version < '3.11'",
    "build",
    "twine",
    "pre-commit",
    "towncrier>=24.8",
    "matplotlib",
    "typer>=0.12",
    "joblib>=1.3",
    "pyarrow>=14",
    "polars>=0.20",
    "nbmake>=1.5",
    "nbformat>=5.0",
]
examples = [
    "jupyter",
    "matplotlib",
]
notebooks = [
    "jupyter",
    "matplotlib>=3.5",
    "nbformat>=5.0",
    "nbclient>=0.10",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
]

[project.scripts]
skdr-eval = "skdr_eval.cli:app"

[project.urls]
Homepage = "https://github.com/dgenio/skdr-eval"
Repository = "https://github.com/dgenio/skdr-eval"
Issues = "https://github.com/dgenio/skdr-eval/issues"
Changelog = "https://github.com/dgenio/skdr-eval/blob/main/CHANGELOG.md"
Documentation = "https://skdr-eval.readthedocs.io/"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
skdr_eval = ["templates/*.html"]

[tool.setuptools_scm]
write_to = "src/skdr_eval/_version.py"
tag_regex = "^v(?P<version>[^\\+]+)(?:\\+.*)?$"
fallback_version = "0.0.0"
# Use "dirty-tag" to append '.dirty' to the version when the working directory has uncommitted changes,
# making it clear when a build is not from a clean state.
local_scheme = "dirty-tag"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=skdr_eval",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow to run (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "pandas.*",
    "sklearn.*",
    "scipy.*",
    "matplotlib.*",
    "xgboost.*",
    "lightgbm.*",
    "catboost.*",
    "polars.*",
    "pyarrow.*",
    "seaborn.*",
    "jinja2.*",
    "pydantic.*",
    "yaml.*",
    "typer.*",
    "joblib.*",
    "mlflow.*",
    "wandb.*",
    "aim.*",
]
ignore_missing_imports = true

# The Typer CLI module uses ``@app.command(...)`` decorators that mypy
# (correctly) flags as untyped because Typer's command decorator is
# overloaded; suppress only that one error code so the rest of the strict
# config still applies.
# NOTE: These overrides mirror mypy.ini (which takes precedence at runtime).
[[tool.mypy.overrides]]
module = ["skdr_eval.cli"]
disable_error_code = ["untyped-decorator"]

# Conflict-resistant changelog (#255). Each PR drops a small fragment under
# changelog.d/ (e.g. ``123.fixed.md``) instead of editing a shared "Unreleased"
# section, so concurrent branches stop colliding on CHANGELOG.md. The fragments
# are compiled into a dated section at release time with ``make changelog``.
[tool.towncrier]
package = "skdr_eval"
directory = "changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
title_format = "## [{version}] - {project_date}"
issue_format = "[#{issue}](https://github.com/dgenio/skdr-eval/issues/{issue})"
underlines = ["", "", ""]
# Non-fragment files kept in changelog.d/ for humans, not for compilation.
ignore = ["README.md", ".gitkeep"]

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true
